dialogs on dialogs on dialogs

--- a/src/components/dialogs/ContactsDialog.scss
+++ b/src/components/dialogs/ContactsDialog.scss
@@ -1,8 +1,8 @@
 @use "../../variables" as *;
 
-.create-challenge__dialog {
+.add-contacts__dialog {
   display: flex;
   flex-direction: column;
-  height: 100svh;
+  // height: 100svh;
   // border: $border;
 }
