--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -12,6 +12,8 @@
     gap: 24px;
 
     .auth-actions {
+      .signed-in-wrapper {
+      }
       .signed-out-wrapper {
         padding: 8px 16px;
 
@@ -20,6 +22,24 @@
           font-family: var(--font-work-sans), sans-serif;
           line-height: 24px;
           letter-spacing: 0.16px;
+        }
+      }
+    }
+  }
+
+  @media (min-width: $portrait) {
+    padding: 16px 48px;
+    // border: $border;
+
+    .navbar-container {
+      .auth-actions {
+        .signed-in-wrapper {
+        }
+        .signed-out-wrapper {
+          padding: 12px 16px;
+
+          button {
+          }
         }
       }
     }
