LandingClient. What's even the point of nextjs

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -127,3 +127,11 @@ article {
     @apply bg-background text-foreground;
   }
 }
+
+//
+// .layout-container {
+//   display: flex;
+//   flex-direction: column;
+//   min-height: 100svh;
+//   border: 2px solid teal;
+// }
