--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,6 +4,10 @@
   padding: 12px 8px 12px 24px;
   width: 100%;
   // border: $border;
+  position: fixed;
+  top: 0;
+  // bottom: 0;
+  z-index: 1000;
 
   .navbar-container {
     display: flex;
