empty landing finish minus footer

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,6 +6,7 @@
   position: fixed;
   top: 0;
   z-index: 1000;
+  background: var(--color-slate-white, #fff);
   // border: $border;
 
   .navbar-container {
