--- a/src/components/pages/EmptyLanding.scss
+++ b/src/components/pages/EmptyLanding.scss
@@ -4,12 +4,13 @@
   @include flex-column;
   gap: 32px;
   padding: 88px 24px 40px;
-  border: $border;
+  padding: 88px 24px 192px;
+  // border: $border;
 
   .public-empty-hero {
     @include flex-column;
     gap: 20px;
-    border: $red;
+    // border: $red;
 
     &-strong_man {
       // border: $violet;
@@ -33,10 +34,107 @@
     }
   }
   .public-empty-examples {
-    border: $red;
+    @include flex-column;
+    gap: 12px;
+    // border: $red;
+
+    h3 {
+      color: rgba(26, 26, 26, 0.8);
+      font-family: var(--font-work-sans), sans-serif;
+      line-height: 24px;
+      letter-spacing: 0.16px;
+    }
+
+    .example-card {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 16px;
+      background: #fff;
+      box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      // border: $violet;
+
+      &-icon {
+        width: 40px;
+        height: 40px;
+        border-radius: 64px;
+        background: #f1f5f9;
+      }
+
+      &-info {
+        @include flex-column;
+        gap: 4px;
+        flex-grow: 1;
+        // border: $border;
+
+        h4 {
+          color: rgba(26, 26, 26, 0.8);
+          font-family: var(--font-work-sans), sans-serif;
+          line-height: 24px;
+          letter-spacing: 0.16px;
+        }
+        p {
+          color: rgba(26, 26, 26, 0.65);
+          font-family: var(--font-asap), sans-serif;
+          font-size: 12px;
+          font-weight: 400;
+          line-height: 16px;
+          letter-spacing: 0.12px;
+        }
+      }
+
+      &-check {
+        img {
+          margin: 6px;
+        }
+        // border: $border;
+      }
+    }
   }
 
   .public-empty-footer {
-    border: $red;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    @include flex-column;
+    gap: 12px;
+    align-items: center;
+    flex-grow: 1;
+    width: 100%;
+    padding: 0 24px;
+    margin-bottom: 40px;
+    background-color: white;
+    // border: $red;
+
+    h3 {
+      color: rgba(26, 26, 26, 0.8);
+      font-family: var(--font-work-sans), sans-serif;
+      font-weight: 700;
+      line-height: 24px; /* 150% */
+      letter-spacing: 0.16px;
+    }
+
+    button {
+      display: flex;
+      gap: 12px;
+      width: 100%;
+      padding: 16px 24px;
+      justify-content: center;
+      align-items: center;
+      border-radius: 8px;
+      background: #1a1a1a;
+      box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
+
+      img {
+      }
+      p {
+        color: var(--color-50, #fafafa);
+        font-family: var(--font-work-sans), sans-serif;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 0.16px;
+      }
+    }
   }
 }
