new global css variables

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,10 @@
 // _variables.scss
 $border: 2px solid teal;
 $red: 2px solid red;
-$violet: 2px solid violet;
+$lime: 2px solid lime;
 $maroon: 2px solid maroon;
+$violet: 2px solid #6200ea;
+$layering: hsl(0 100% 50% / 0.1); //for background
 $portrait: 500px;
 $landscape: 1024px;
 $desktop: 1200px;
