mobile empty footer

--- a/src/components/pages/EmptyLanding.scss
+++ b/src/components/pages/EmptyLanding.scss
@@ -102,10 +102,9 @@
     align-items: center;
     flex-grow: 1;
     width: 100%;
-    padding: 0 24px;
-    margin-bottom: 40px;
+    padding: 12px 24px 40px;
     background-color: white;
-    // border: $red;
+    // outline: $lime;
 
     h3 {
       color: rgba(26, 26, 26, 0.8);
