empty public landing desktop/tablet

--- a/src/components/public-landing/EmptyLanding.scss
+++ b/src/components/public-landing/EmptyLanding.scss
@@ -3,7 +3,6 @@
 .public-empty-container {
   @include flex-column;
   gap: 32px;
-  padding: 88px 24px 40px;
   padding: 88px 24px 172px;
   // border: $border;
 
@@ -11,10 +10,6 @@
     @include flex-column;
     gap: 20px;
     // border: $red;
-
-    &-strong_man {
-      // border: $violet;
-    }
 
     h1 {
       color: rgba(26, 26, 26, 0.9);
@@ -125,8 +120,6 @@
       background: #1a1a1a;
       box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
 
-      img {
-      }
       p {
         color: var(--color-50, #fafafa);
         font-family: var(--font-work-sans), sans-serif;
@@ -135,5 +128,104 @@
         letter-spacing: 0.16px;
       }
     }
+  }
+
+  @media (min-width: $portrait) {
+    gap: 48px;
+    padding: 80px 48px 64px;
+    min-height: 100svh;
+    // border: $border;
+
+    .public-empty-hero {
+      @include flex-column;
+      align-items: center;
+      gap: 32px;
+      padding-top: 40px;
+      // border: $red;
+
+      h1 {
+        color: rgba(26, 26, 26, 0.9);
+        font-family: var(--font-ultra), sans-serif;
+        font-size: 64px;
+        line-height: 80px;
+        text-align: center;
+      }
+
+      p {
+        max-width: 379px;
+        color: rgba(26, 26, 26, 0.8);
+        font-family: var(--font-asap), sans-serif;
+        text-align: center;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.16px;
+      }
+    }
+    .public-empty-examples {
+      @include flex-column;
+      gap: 20px;
+      // border: $red;
+
+      h3 {
+        font-size: 25.6px;
+        line-height: 33.6px;
+        letter-spacing: 0.16px;
+      }
+    }
+
+    .public-empty-footer {
+      position: static;
+      align-self: center;
+      margin-top: auto;
+      gap: 16px;
+      padding: 0;
+      flex-grow: 0;
+      width: 100%;
+      max-width: 426px;
+      // outline: $lime;
+
+      h3 {
+        font-size: 18px;
+      }
+
+      button {
+        padding: 20px 24px;
+
+        p {
+          font-size: 18px;
+        }
+      }
+    }
+  }
+  @media (min-width: $desktop) {
+    // border: $border;
+
+    .public-empty-hero {
+      // border: $red;
+
+      h1 {
+        max-width: 580px;
+      }
+    }
+    .public-empty-examples {
+      display: none;
+    }
+  }
+}
+
+/* ------------------------- Public Challenger Modal ------------------------ */
+
+.pc-modal-overlay {
+  position: fixed;
+  @include flex-column;
+  top: 0;
+  left: 0;
+  min-height: 100svh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 100;
+  // overflow: auto;
+
+  .pc-modal-content {
   }
 }
