--- a/src/components/public-landing/EmptyLanding.scss
+++ b/src/components/public-landing/EmptyLanding.scss
@@ -212,3 +212,42 @@
     }
   }
 }
+
+/* ------------------------- Public Challenger Form ------------------------- */
+
+.public-challenger-form_container {
+  @include flex-column;
+  width: 100%;
+  outline: $border;
+
+  .public-challenger-form {
+    @include flex-column;
+    border-radius: 12px;
+    background: var(--color-slate-white, #fff);
+    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.05);
+
+    &_header {
+      display: flex;
+      justify-content: space-between;
+      padding: 16px;
+      padding-bottom: 8px;
+
+      .public-challenger-form_close-button {
+        display: flex;
+        padding: 8px;
+        // outline: $violet;
+        img {
+          height: 24px;
+          width: 24px;
+        }
+      }
+    }
+    &_body {
+      @include flex-column;
+      gap: 16px;
+      padding: 16px;
+    }
+    &_footer {
+    }
+  }
+}
