blinking cursor giving up

--- a/src/components/public-landing/EmptyLanding.scss
+++ b/src/components/public-landing/EmptyLanding.scss
@@ -246,6 +246,9 @@
       @include flex-column;
       gap: 16px;
       padding: 16px;
+      input {
+        background: transparent;
+      }
     }
     &_footer {
     }
