pre blinking cursor attempt

--- a/src/components/public-landing/EmptyLanding.scss
+++ b/src/components/public-landing/EmptyLanding.scss
@@ -246,8 +246,12 @@
       @include flex-column;
       gap: 16px;
       padding: 16px;
+
+
       input {
         background: transparent;
+        outline-color: transparent;
+        // caret-color: transparent;
       }
     }
     &_footer {
