--- a/src/components/public-landing/EmptyLanding.scss
+++ b/src/components/public-landing/EmptyLanding.scss
@@ -1,5 +1,58 @@
 @use "@/styles/_variables.scss" as *;
 
+//Mixin: Example Card
+@mixin example-card(
+  $width: auto,
+  $gap: 12px,
+  $padding: 16px,
+  $background: #fff,
+  $box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1)
+) {
+  display: flex;
+  align-items: center;
+  gap: $gap;
+  padding: $padding;
+  background: $background;
+  box-shadow: $box-shadow;
+  border-radius: 12px;
+  width: $width;
+
+  &-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 64px;
+    background: #f1f5f9;
+  }
+
+  &-info {
+    @include flex-column;
+    gap: 4px;
+    flex-grow: 1;
+
+    h4 {
+      color: rgba(26, 26, 26, 0.8);
+      font-family: var(--font-work-sans), sans-serif;
+      line-height: 24px;
+      letter-spacing: 0.16px;
+    }
+    p {
+      color: rgba(26, 26, 26, 0.65);
+      font-family: var(--font-asap), sans-serif;
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 16px;
+      letter-spacing: 0.12px;
+    }
+  }
+
+  &-check {
+    img {
+      margin: 6px;
+    }
+  }
+}
+/* -------------------------------------------------------------------------- */
+
 .public-empty-container {
   @include flex-column;
   gap: 32px;
@@ -40,51 +93,55 @@
       letter-spacing: 0.16px;
     }
 
+    // .example-card {
+    //   display: flex;
+    //   align-items: center;
+    //   gap: 12px;
+    //   padding: 16px;
+    //   background: #fff;
+    //   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
+    //   border-radius: 12px;
+    //   // border: $violet;
+
+    //   &-icon {
+    //     width: 40px;
+    //     height: 40px;
+    //     border-radius: 64px;
+    //     background: #f1f5f9;
+    //   }
+
+    //   &-info {
+    //     @include flex-column;
+    //     gap: 4px;
+    //     flex-grow: 1;
+    //     // border: $border;
+
+    //     h4 {
+    //       color: rgba(26, 26, 26, 0.8);
+    //       font-family: var(--font-work-sans), sans-serif;
+    //       line-height: 24px;
+    //       letter-spacing: 0.16px;
+    //     }
+    //     p {
+    //       color: rgba(26, 26, 26, 0.65);
+    //       font-family: var(--font-asap), sans-serif;
+    //       font-size: 12px;
+    //       font-weight: 400;
+    //       line-height: 16px;
+    //       letter-spacing: 0.12px;
+    //     }
+    //   }
+
+    //   &-check {
+    //     img {
+    //       margin: 6px;
+    //     }
+    //     // border: $border;
+    //   }
+    // }
+
     .example-card {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      padding: 16px;
-      background: #fff;
-      box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
-      border-radius: 12px;
-      // border: $violet;
-
-      &-icon {
-        width: 40px;
-        height: 40px;
-        border-radius: 64px;
-        background: #f1f5f9;
-      }
-
-      &-info {
-        @include flex-column;
-        gap: 4px;
-        flex-grow: 1;
-        // border: $border;
-
-        h4 {
-          color: rgba(26, 26, 26, 0.8);
-          font-family: var(--font-work-sans), sans-serif;
-          line-height: 24px;
-          letter-spacing: 0.16px;
-        }
-        p {
-          color: rgba(26, 26, 26, 0.65);
-          font-family: var(--font-asap), sans-serif;
-          font-size: 12px;
-          font-weight: 400;
-          line-height: 16px;
-          letter-spacing: 0.12px;
-        }
-      }
-
-      &-check {
-        img {
-          margin: 6px;
-        }
-        // border: $border;
-      }
+      @include example-card;
     }
   }
 
@@ -217,8 +274,9 @@
 
 .public-challenger-form_container {
   @include flex-column;
+  gap: 32px;
   width: 100%;
-  outline: $border;
+  // outline: $border;
 
   .public-challenger-form {
     @include flex-column;
@@ -256,7 +314,7 @@
           top: 50%;
           left: 0;
           transform: translateY(-50%);
-          margin-left: 12px;
+          // margin-left: 12px;
           height: 24px;
           border: var(--color-slate-900, #0f172a), 1.5px solid;
         }
@@ -265,23 +323,165 @@
           background: transparent;
           outline-color: transparent;
           padding: 12px;
+          color: var(--text-primary, #0f172a);
+          font-family: var(--font-work-sans), sans-serif;
+          font-size: 20px;
+          line-height: 28px;
+
+          &:focus {
+            outline: transparent;
+          }
 
           &::placeholder {
             color: rgba(26, 26, 26, 0.6);
             font-family: var(--font-work-sans), sans-serif;
             font-size: 20px;
             line-height: 28px;
-            text-indent: 8px;
+            // text-indent: 8px;
           }
         }
 
         &:has(input[value=""]) input {
           caret-color: transparent;
         }
+      }
 
+      .pro-example-features {
+        @include flex-column;
+        gap: 8px;
+        padding: 0 12px;
+        // outline: $violet;
+
+        .pro-example-feature {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          gap: 12px;
+
+          p {
+            color: var(--color-300, #bdbdbd);
+            font-family: Asap;
+            line-height: 24px;
+            letter-spacing: 0.15px;
+          }
+
+          .pro-fake-btn {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            padding: 8px 12px;
+            font-family: (--font-work-sans), sans-serif;
+            border-radius: 9px;
+            background: rgba(26, 26, 26, 0.05);
+            cursor: not-allowed;
+
+            p {
+              color: rgba(26, 26, 26, 0.25);
+              font-size: 15.75px;
+              font-weight: 600;
+              line-height: 22.5px;
+              letter-spacing: 0.158px;
+            }
+
+            div {
+              padding: 4px 6px 4px 7.5px;
+              color: rgba(26, 26, 26, 0.7);
+              font-size: 12px;
+              font-weight: 600;
+              line-height: 16px;
+              letter-spacing: 0.12px;
+              border-radius: 8px;
+              background: var(--color-sunglow-400, #ffcd29);
+            }
+          }
+        }
       }
     }
     &_footer {
+      padding: 12px 16px;
+      // outline: $lime;
+
+      button {
+        display: flex;
+        justify-content: center;
+        gap: 12px;
+        width: 100%;
+        padding: 12px 24px;
+        background: #1a1a1a;
+        box-shadow: 0px 1px 2px 0px rgba(26, 26, 26, 0.08);
+        color: var(--color-50, #fafafa);
+        font-family: var(--font-work-sans), sans-serif;
+        line-height: 24px;
+        letter-spacing: 0.16px;
+        border-radius: 8px;
+      }
+    }
+  }
+
+  .public-challenger-form_suggestions {
+    @include flex-column;
+    gap: 12px;
+    padding: 0 12px;
+
+    h3 {
+      color: rgba(250, 250, 250, 0.8);
+      font-family: var(--font-work-sans), sans-serif;
+      line-height: 24px;
+      letter-spacing: 0.16px;
+    }
+    .suggestion-example-cards {
+      @include flex-column;
+      gap: 12px;
+
+      // .example-card {
+      //   display: flex;
+      //   align-items: center;
+      //   gap: 12px;
+      //   padding: 16px;
+      //   background: #fff;
+      //   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
+      //   border-radius: 12px;
+      //   // border: $violet;
+
+      //   &-icon {
+      //     width: 40px;
+      //     height: 40px;
+      //     border-radius: 64px;
+      //     background: #f1f5f9;
+      //   }
+
+      //   &-info {
+      //     @include flex-column;
+      //     gap: 4px;
+      //     flex-grow: 1;
+      //     // border: $border;
+
+      //     h4 {
+      //       color: rgba(26, 26, 26, 0.8);
+      //       font-family: var(--font-work-sans), sans-serif;
+      //       line-height: 24px;
+      //       letter-spacing: 0.16px;
+      //     }
+      //     p {
+      //       color: rgba(26, 26, 26, 0.65);
+      //       font-family: var(--font-asap), sans-serif;
+      //       font-size: 12px;
+      //       font-weight: 400;
+      //       line-height: 16px;
+      //       letter-spacing: 0.12px;
+      //     }
+      //   }
+
+      //   &-check {
+      //     img {
+      //       margin: 6px;
+      //     }
+      //     // border: $border;
+      //   }
+      // }
+      .example-card {
+        @include example-card;
+      }
     }
   }
 }
