--- a/src/components/public-landing/EmptyLanding.scss
+++ b/src/components/public-landing/EmptyLanding.scss
@@ -1,21 +1,16 @@
 @use "@/styles/_variables.scss" as *;
 
 //Mixin: Example Card
-@mixin example-card(
-  $width: auto,
-  $gap: 12px,
-  $padding: 16px,
-  $background: #fff,
-  $box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1)
-) {
+@mixin example-card($max-width: none) {
   display: flex;
   align-items: center;
-  gap: $gap;
-  padding: $padding;
-  background: $background;
-  box-shadow: $box-shadow;
+  gap: 12px;
+  padding: 16px;
+  background: #fff;
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-  width: $width;
+  width: auto;
+  max-width: $max-width;
 
   &-icon {
     width: 40px;
@@ -92,53 +87,6 @@
       line-height: 24px;
       letter-spacing: 0.16px;
     }
-
-    // .example-card {
-    //   display: flex;
-    //   align-items: center;
-    //   gap: 12px;
-    //   padding: 16px;
-    //   background: #fff;
-    //   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
-    //   border-radius: 12px;
-    //   // border: $violet;
-
-    //   &-icon {
-    //     width: 40px;
-    //     height: 40px;
-    //     border-radius: 64px;
-    //     background: #f1f5f9;
-    //   }
-
-    //   &-info {
-    //     @include flex-column;
-    //     gap: 4px;
-    //     flex-grow: 1;
-    //     // border: $border;
-
-    //     h4 {
-    //       color: rgba(26, 26, 26, 0.8);
-    //       font-family: var(--font-work-sans), sans-serif;
-    //       line-height: 24px;
-    //       letter-spacing: 0.16px;
-    //     }
-    //     p {
-    //       color: rgba(26, 26, 26, 0.65);
-    //       font-family: var(--font-asap), sans-serif;
-    //       font-size: 12px;
-    //       font-weight: 400;
-    //       line-height: 16px;
-    //       letter-spacing: 0.12px;
-    //     }
-    //   }
-
-    //   &-check {
-    //     img {
-    //       margin: 6px;
-    //     }
-    //     // border: $border;
-    //   }
-    // }
 
     .example-card {
       @include example-card;
@@ -433,55 +381,25 @@
       @include flex-column;
       gap: 12px;
 
-      // .example-card {
-      //   display: flex;
-      //   align-items: center;
-      //   gap: 12px;
-      //   padding: 16px;
-      //   background: #fff;
-      //   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
-      //   border-radius: 12px;
-      //   // border: $violet;
-
-      //   &-icon {
-      //     width: 40px;
-      //     height: 40px;
-      //     border-radius: 64px;
-      //     background: #f1f5f9;
-      //   }
-
-      //   &-info {
-      //     @include flex-column;
-      //     gap: 4px;
-      //     flex-grow: 1;
-      //     // border: $border;
-
-      //     h4 {
-      //       color: rgba(26, 26, 26, 0.8);
-      //       font-family: var(--font-work-sans), sans-serif;
-      //       line-height: 24px;
-      //       letter-spacing: 0.16px;
-      //     }
-      //     p {
-      //       color: rgba(26, 26, 26, 0.65);
-      //       font-family: var(--font-asap), sans-serif;
-      //       font-size: 12px;
-      //       font-weight: 400;
-      //       line-height: 16px;
-      //       letter-spacing: 0.12px;
-      //     }
-      //   }
-
-      //   &-check {
-      //     img {
-      //       margin: 6px;
-      //     }
-      //     // border: $border;
-      //   }
-      // }
-      .example-card {
-        @include example-card;
+      button {
+        text-align: left;
+        .example-card {
+          @include example-card;
+        }
       }
+    }
+  }
+
+  @media (min-width: $portrait) {
+    justify-content: center;
+    max-width: 532px;
+    // outline: $lime;
+
+
+    .public-challenger-form_suggestions {
+      width: 378px;
+      margin: 0 auto;
+      // outline: $lime;
     }
   }
 }
