--- a/src/components/public-landing/EmptyLanding.scss
+++ b/src/components/public-landing/EmptyLanding.scss
@@ -362,6 +362,12 @@
         line-height: 24px;
         letter-spacing: 0.16px;
         border-radius: 8px;
+        transition: background 0.3s ease;
+
+        &:disabled {
+          background: rgba(26, 26, 26, 0.15);
+          cursor: not-allowed;
+        }
       }
     }
   }
@@ -394,7 +400,6 @@
     justify-content: center;
     max-width: 532px;
     // outline: $lime;
-
 
     .public-challenger-form_suggestions {
       width: 378px;
