--- a/src/components/public-landing/EmptyLanding.scss
+++ b/src/components/public-landing/EmptyLanding.scss
@@ -57,19 +57,31 @@
   .public-empty-hero {
     @include flex-column;
     gap: 20px;
+    text-align: center;
     // border: $red;
 
-    h1 {
-      color: rgba(26, 26, 26, 0.9);
-      font-family: var(--font-ultra), sans-serif;
-      font-size: 40px;
-      line-height: 56px;
-    }
+    &_titles {
+      @include flex-column;
+      gap: 4px;
 
+      h2 {
+        color: rgba(26, 26, 26, 0.8);
+        font-family: var(--font-work-sans), sans-serif;
+        font-size: 20px;
+        line-height: 28px;
+        letter-spacing: 0.2px;
+      }
+
+      h1 {
+        color: rgba(26, 26, 26, 0.9);
+        font-family: var(--font-ultra), sans-serif;
+        font-size: 40px;
+        line-height: 56px;
+      }
+    }
     p {
       color: rgba(26, 26, 26, 0.8);
       font-family: var(--font-asap), sans-serif;
-
       font-size: 14px;
       font-weight: 400;
       line-height: 20px;
@@ -138,6 +150,7 @@
   @media (min-width: $portrait) {
     gap: 48px;
     padding: 80px 48px 64px;
+    padding: 80px 48px 40px;
     min-height: 100svh;
     // border: $border;
 
@@ -148,34 +161,32 @@
       padding-top: 40px;
       // border: $red;
 
-      h1 {
-        color: rgba(26, 26, 26, 0.9);
-        font-family: var(--font-ultra), sans-serif;
-        font-size: 64px;
-        line-height: 80px;
-        text-align: center;
+      &_titles {
+        gap: 16px;
+
+        h2 {
+          font-size: 24px;
+          line-height: 32px;
+          letter-spacing: 0.24px;
+        }
+
+        h1 {
+          font-size: 64px;
+          line-height: 80px;
+        }
       }
 
       p {
-        max-width: 379px;
-        color: rgba(26, 26, 26, 0.8);
-        font-family: var(--font-asap), sans-serif;
-        text-align: center;
+        text-wrap: balance;
+        max-width: 473px;
         font-size: 16px;
         line-height: 24px;
         letter-spacing: 0.16px;
+        // border: $violet;
       }
     }
     .public-empty-examples {
-      @include flex-column;
-      gap: 20px;
-      // border: $red;
-
-      h3 {
-        font-size: 25.6px;
-        line-height: 33.6px;
-        letter-spacing: 0.16px;
-      }
+      display: none;
     }
 
     .public-empty-footer {
@@ -211,9 +222,6 @@
       h1 {
         max-width: 580px;
       }
-    }
-    .public-empty-examples {
-      display: none;
     }
   }
 }
