--- a/src/components/public-landing/FilledLanding.scss
+++ b/src/components/public-landing/FilledLanding.scss
@@ -1,6 +1,38 @@
 @use "@/styles/_variables.scss" as *;
 
 .public-filled-container {
+  @include flex-column;
   min-height: 100svh;
-  border: $border;
+  padding: 88px 24px 0;
+  // border: $border;
+
+  .public-filled-hero {
+    @include flex-column;
+    gap: 24px;
+    outline: $border;
+
+    &-text {
+      @include flex-column;
+      gap: 4px;
+
+      h2 {
+        color: rgba(26, 26, 26, 0.8);
+        font-family: var(--font-work-sans), sans-serif;
+        line-height: 24px;
+        letter-spacing: 0.16px;
+      }
+      p {
+        color: rgba(26, 26, 26, 0.9);
+        font-family: var(--font-ultra), sans-serif;
+        font-size: 40px;
+        font-weight: 400;
+        line-height: 56px;
+      }
+    }
+  }
+  .public-filled-timer {
+    margin-top: auto;
+  }
+  .public-filled-footer {
+  }
 }
