--- a/src/components/public-landing/FilledLanding.scss
+++ b/src/components/public-landing/FilledLanding.scss
@@ -93,7 +93,11 @@
         padding: 16px;
         background: transparent;
         box-shadow: none;
-        // border: 1px solid #1a1a1a;
+        transition: background 0.4s ease;
+      }
+
+      .bg-active-grey {
+        background: rgba(26, 26, 26, 0.08);
       }
 
       &[aria-expanded="true"] .public-challenge-action-menu {
@@ -146,7 +150,7 @@
             }
 
             &:hover {
-              background: var(--slate-100, #f1f5f9);
+              background: rgba(26, 26, 26, 0.08);
             }
           }
         }
