--- a/src/components/public-landing/FilledLanding.scss
+++ b/src/components/public-landing/FilledLanding.scss
@@ -119,7 +119,7 @@
         height: 0;
         overflow: clip;
         visibility: hidden;
-        transition: height 1.5s ease, visibility 2s;
+        transition: height .5s ease, visibility 2s;
         // border: $border;
 
         ul {
