--- a/src/components/public-landing/FilledLanding.scss
+++ b/src/components/public-landing/FilledLanding.scss
@@ -250,3 +250,69 @@
     }
   }
 }
+
+/* --------------------- Delete Public Challenger Modal --------------------- */
+
+.delete-pc-modal {
+  @include flex-column;
+  padding: 24px 24px 16px 24px;
+  background: var(--color-slate-white, #fff);
+  border-radius: 6px;
+  border: 1px solid #cbd5e1;
+
+  h1 {
+    color: #0f172a;
+    font-family: "Work Sans";
+    font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 8px;
+  }
+
+  &-body {
+    margin-bottom: 24px;
+    p {
+      color: rgba(26, 26, 26, 0.65);
+      font-family: Asap;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      letter-spacing: 0.14px;
+
+      span {
+        color: rgba(26, 26, 26, 0.8);
+        font-weight: 600;
+      }
+
+      a {
+        color: #64748b;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 20px;
+        letter-spacing: 0.14px;
+        text-decoration-line: underline;
+      }
+    }
+  }
+  &-footer {
+    display: flex;
+    justify-content: flex-end;
+    gap: 12px;
+
+    button {
+      padding: 12px 16px;
+      color: rgba(26, 26, 26, 0.8);
+      font-family: "Work Sans";
+      font-weight: 600;
+      line-height: 24px;
+      letter-spacing: 0.16px;
+    }
+    button + button {
+      color: var(--color-50, #fafafa);
+      font-weight: 600;
+      letter-spacing: 0.16px;
+      background: #1a1a1a;
+      box-shadow: 0px 1px 2px 0px rgba(26, 26, 26, 0.08);
+      border-radius: 8px;
+    }
+  }
+}
